Kleur geven aan tabel

--- a/drones.html
+++ b/drones.html
@@ -49,7 +49,7 @@ Samengewerkt met Jelle Van Loock, Kevin Aerts en Genzo Vandervelden
 <body>
     <style media="screen">
         table, th, td {
-            border: 1px solid lightseagreen;
+            border: 1px solid orangered;
         }
     </style>
 <div>
